--- a/interface/index.css
+++ b/interface/index.css
@@ -8,3 +8,12 @@ body {
     height: 100%;
     width: 100%;
 }
+
+tool-box {
+  position: absolute;
+  z-index: 25;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 15%
+}
